<resources>
    <string name="app_name">MVPparking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Custom strings -->
    <string name="main_title_parking_size">myValet</string>
    <string name="main_action_add_size">Submit</string>
    <string name="main_msg_provide_txt">Please provide amount of Parking Lots:</string>
    <string name="main_msg_toast_set">Number of parking spaces set to %d</string>
    <string name="main_error_show">Error not able to set amount</string>
    <string name="main_img_valet">image of a Valet</string>
    <string name="main_msg_nozero">Please set amount larger than 0</string>
    <string name="nav_btn_reserve">Reserve</string>
    <string name="nav_btn_release">Release</string>
    <string name="nav_msg_toast_reserve">Please fill in the fields to make a reservation</string>
    <string name="nav_msg_toast_release">You cancel your reservation here</string>
    <string name="nav_btn_auto_release">Auto Release</string>
    <string name="reserve_msg_create">Create a reservation</string>
    <string name="reserve_edittext_start">From</string>
    <string name="reserve_edittext_to">To</string>
    <string name="reservationview_err_msg_inthepast">You can\'t schedule a reservation in the past</string>
    <string name="reservationview_err_msg_missingfield">You\'re missing a field</string>
    <string name="reservationview_err_msg_delorean">Unless you\'re driving the DeLorean time machine, you can\'t pick up your car before you park it</string>
    <string name="reservationview_err_msg_numberformat">Parking Number provided does not have the appropriate format</string>
    <string name="reservationview_err_msg_zero">Parking Number should be larger than zero</string>
    <string name="reservationview_err_msg_large">We have parking numbers available up to %d</string>
    <string name="reservationview_err_msg_largerthan3">Your security code should have at least 3 characters</string>
    <string name="reservationview_msg_success">Reservation scheduled successfully</string>
    <string name="release_hint_parking_security_code">Security Code</string>
    <string name="release_btn_txt">Release</string>
    <string name="release_hint_parking_lot_number">Parking Lot Number</string>
    <string name="release_view_err_msg_no_match">We couldn\'t find a reservation with that security code on that lot</string>
    <string name="reslease_view_msg_success">The reservation was canceled</string>
    <string name="release_msg_release_reservation">Release a reservation</string>
    <string name="release_view_err_msg_no_reservation">There is no existing reservation to be released</string>
    <string name="err_msg_more_than_one_match">I found more than one reservation with that data and I\'m not that smart to figure out which one you want to release</string>
</resources>