<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy_blue"
        tools:context=".fragments.ReservationFragment">

        <TextView
            android:id="@+id/text_create_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbarSize="4dp"
            android:text="@string/reserve_msg_create"
            android:textColor="@color/bonjour"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/start_date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/start_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/reserve_edittext_start"
            android:inputType="none"
            android:textColor="@color/hilt_gray"
            android:textColorHint="@color/hilt_gray"
            app:layout_constraintBottom_toTopOf="@id/end_date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_create_reservation" />

        <EditText
            android:id="@+id/end_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/reserve_edittext_to"
            android:inputType="none"
            android:textColor="@color/hilt_gray"
            android:textColorHint="@color/hilt_gray"
            app:layout_constraintBottom_toTopOf="@id/parking_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_date_time" />

        <EditText
            android:id="@+id/parking_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="Parking number"
            android:inputType="number"
            android:textColor="@color/hilt_gray"
            android:textColorHint="@color/hilt_gray"
            app:layout_constraintBottom_toTopOf="@id/security_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/end_date_time" />

        <EditText
            android:id="@+id/security_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:hint="Security code"
            android:inputType="textCapCharacters"
            android:textColor="@color/hilt_gray"
            android:textColorHint="@color/hilt_gray"
            app:layout_constraintBottom_toTopOf="@id/reserve_btn_schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parking_number" />

        <Button
            android:id="@+id/reserve_btn_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Schedule"
            app:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/security_code" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>